tests/errors/use_after_move.erbos
Point is { x int }
spark {
  a is Point()
  b is now a
  yell(a.x)
}
